# app/Http/Resources/ZoneResource.php
@@ -5,6 +5,18 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
+
+
+/**
+ * @OA\Schema(
+ *     schema="ZoneResource",
+ *     description="Respuestas de la zona",
+ *     @OA\Property(property="id", type="integer", description="ID de la zona"),
+ *     @OA\Property(property="name", type="string", description="Nombre de la zona"),
+ *     @OA\Property(property="description", type="string", description="Descripcion de la zona"),
+ *     @OA\Property(property="location", type="string", description="Ubicacion de la zona")
+ * )
+ */
 class ZoneResource extends JsonResource
 {
     /**
